# sandbox-code-agent

./: .env.example  .gitignore  DETAILED_PLAN.md  PLAN.md  README.md  RESULTS.md  config.py  hello_world.py  pyproject.toml
agent/: __init__.py  graph.py  llm.py  nodes.py  state.py
bench/: __init__.py  injections.jsonl  prompt_eval.py  requests.jsonl  run_gauntlet.py  sample_sales.csv
bench/results/: baseline.json  postfix.json  sc5_recheck.json  v3_scripting_check.json
demo/: __init__.py  app.py  cli.py
hosting/: __init__.py  limits.py
prompts/: __init__.py  codegen.v1.md  codegen.v2.md  codegen.v3.md  codegen.v4-rejected.md  repair.v1.md
renderers/: __init__.py  chart.py  dispatch.py  envelope.py  file.py  outcome.py  redact.py  table.py  text.py
sandbox/: Dockerfile.sandbox  SECURITY.md  __init__.py  base.py  docker_backend.py  e2b_backend.py  fake.py
tests/: fakes.py  test_agent_state.py  test_envelope.py  test_graph_loop.py  test_hosting_limits.py  test_injection.py  test_injection_corpus.py  test_loop_live.py  test_nodes.py  test_prompt_eval.py  test_redact.py  test_renderers.py  test_sandbox_roundtrip.py  test_sandbox_security.py
